2024-11-12  Ulrich Müller  <ulm@gentoo.org>

	* devbook-mode.el (devbook-set-schema, devbook-insert-skeleton):
	The document element has been renamed from guide to devbook.
	* test/devbook-mode-tests.el (devbook-mode-test-skeleton): Update.

2024-11-11  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-bug-regexp): Allow a fragment
	identifier, in order to refer to a specific comment.
	* test/ebuild-mode-tests.el (ebuild-mode-test-bug-url): Update.

2024-11-06  Ulrich Müller  <ulm@gentoo.org>

	* devbook-mode.el (devbook-set-schema): Renamed from
	devbook-locate-schema-file. Call rng-locate-schema-file first,
	then fall back to parent directories.
	(devbook-mode): Update caller.
	* test/devbook-mode-tests.el (devbook-mode-test-set-schema):
	Renamed from devbook-mode-test-locate-schema and updated.

	* test/ebuild-mode-tests.el (ebuild-mode-test-skeleton):
	* test/glep-mode-tests.el (glep-mode-test-skeleton):
	* test/gentoo-newsitem-mode-tests.el
	(gentoo-newsitem-test-skeleton):
	* test/devbook-mode-tests.el (devbook-mode-test-skeleton):
	Move variable and function for test input into the cl-letf* form
	and delete them from global scope.

2024-11-03  Ulrich Müller  <ulm@gentoo.org>

	* test/xemacs-test-wrapper.el (ert-deftest): Silence info-level
	warnings in XEmacs 21.5.

	* ebuild-mode.el (ebuild-run-command-*): Doc fix.

	* ebuild-mode.el (ebuild-mode-get-completion-function):
	(ebuild-mode-get-keywords, ebuild-mode-unescape-string):
	* test/ebuild-mode-tests.el (ebuild-mode-test-unescape-string):
	Delete XEmacs 21.4 compatibility code.

	* ebuild-mode.el (ebuild-mode-time-string): Delete compatibility
	function for XEmacs 21.4.
	(ebuild-mode-update-copyright, ebuild-mode-insert-skeleton)
	(ebuild-mode-insert-tag-line): Update all callers.
	* gentoo-newsitem-mode.el (gentoo-newsitem-insert-skeleton):
	* glep-mode.el (glep-mode-update-last-modified)
	(glep-mode-insert-skeleton): Update all callers.
	* test/ebuild-mode-tests.el